tests/rosetta/out/Smalltalk/apply-a-callback-to-an-array-2.out
/tmp/apply-a-callback-to-an-array-2.st:4: parse error, expected ']'
